syntax = "proto3";

package proto;

option go_package = "proto";

import "message_type.proto";

// Message in a chat conversation
message Message {
  // Unique identifier for the message
  int32 id = 1;
  // Identifier for the conversation this message belongs to
  int32 conversation_id = 2;
  // Role of the message sender (e.g., user, assistant)
  string role = 3;
  // Text content of the message
  string content = 4;
  // Optional images associated with the message
  repeated string images = 5;
  message ToolCallsItem {
    // This message intentionally left empty or will be extended later
    reserved 1;
  }
  

  // Optional tool calls associated with the message
  repeated ToolCallsItem tool_calls = 6;
  // Optional thinking process of the model, if applicable
  string thinking = 7;
  // Type of the message (e.g., text, image, pause, resume, cancel, etc.)
  MessageType type = 8;
}
